- Limited the number of total blocks the Hearth can affect to 2000
    - This replaces the 20-block radius that it used to have
    - increased the technical radius to 64 blocks
    - (note that it can't actually fill the entire 64-block radius, but it can reach these distances if you make a tunnel for the hearth to spread through)
- Added Polish translation by @Lifus_Crustus on our Discord server
- Added Portuguese translation by @Joymachs and @Vellar on our Discord server
- Fixed multiple bugs with the Hearth that would cause it to not detect ceilings or solid blocks properly

- Technical Changes:
    - BlockEffects and TempModifiers are now stored in a map instead of a list
        - Massive performance uplift
        - Easier to store/lookup elements by their ID
    - Updates to TempModifiers
        - Moved to the capabilities system
        - Much easier to add arguments
    - Added new events for compat mod developers to hook into:
        - TempModifierEvent.Add
            - Called when a TempModifier modifier is added to a player
            - Cancellable
            - Allows for changing arguments, enabling/disabling duplicates, and changing the modifier type
        - TempModifierEvent.Remove
            - Called when a TempModifier is removed from a player
            - Cancellable
            - Allows for changing the number of modifiers removed
        - TempModifierEvent.Init
            - Called when the registry of TempModifiers or BlockEffects is being built
            - Allows for injection of custom TempModifiers and BlockEffects
            - If you call this event manually, use getPool().flush() beforehand to prevent duplicate entries (lag)
    - The Hearth now uses the capability system instead of NBT
            - This should increase performance and prevent issues with the NBT data limit on some servers
    - "fuel_items.toml" config file changes: